--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,10 @@
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 16px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
-  color: #00B7FF;
+  color: navy;
 }
 
 .delete-form {
@@ -13,7 +13,7 @@ a {
 }
 
 .delete-form button {
-  color: red;
+  color: rgb(209, 87, 87);
 }
 
 li {
