--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,8 +9,6 @@
 </head>
 <body>
   <h1><%= title %></h1>
-  <a href="/todos">Todos as of <%= time %></a>
-</ul>
-<a href="/todos/new">Add To-Do</a>
+  <a href="/skills">Skills List!</a>
 </body>
 </html>
