--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -4,30 +4,30 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Express Todos</title>
+  <title>Express Skills</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
-  <h1>Todos as of <%= time %></h1>
+  <h1>Skills as of <%= time %></h1>
   <% if(error) { %>
     <h2><%= error %></h2>
   <% } %>
   <ul>
-    <% todos.forEach(todo => { %>
+    <% skills.forEach(skill => { %>
       <li>
         <form 
-          action="/todos/<%= todo._id %>?_method=DELETE"
+          action="/skills/<%= skill._id %>?_method=DELETE"
           class="delete-form"
           method="POST"
         >
           <button type="submit">X</button>
         </form>
-        <a href="/todos/<%= todo._id %>"><%= todo.text %></a>
+        <a href="/skills/<%= skill._id %>"><%= skill.text %></a>
          -
-        <%= todo.done ? "done" : "not done" %>  
+        <%= skill.done ? "done" : "not done" %>  
       </li>
     <% }) %>
   </ul>
-  <a href="/todos/new">Add To-Do</a>
+  <a href="/skills/new">Add To-Do</a>
 </body>
 </html>
